# minis

./: README.md
.github/workflows/: events.yaml
events/: Cargo.toml
events/src/: main.rs
events/src/discord/: api.rs  constants.rs  mod.rs  models.rs  state.rs
events/src/kick/: api.rs  constants.rs  mod.rs  protocol.rs  routes.rs  state.rs
events/src/shared/: app.rs  appstate.rs  event.rs  event_router.rs  mod.rs  notifier.rs  routes.rs  utils.rs
events/src/twitch/: appstate.rs  constants.rs  mod.rs  protocol.rs  routes.rs  state.rs  verifier.rs
protobuff/: README.md
protobuff/map-reduce/: Cargo.toml
protobuff/map-reduce/src/: client.rs
protobuff/pbuf/: Cargo.toml  build.rs
protobuff/pbuf/proto/: hello.proto
protobuff/pbuf/src/: main.rs  pb.rs
