[package]
name = "events"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "*" }
http-body-util = { version = "0.1.0" }
tokio = { version = "1.0", features = ["full"] }
rsa = { version = "*", features = ["sha2"] }
sha2 = { version = "*" }
hmac = { version = "*" }
hex = { version = "*" }
tracing-subscriber = { version = "*", features = ["env-filter"] }
serde = { version = "*", features = ["derive"] }
reqwest = { version = "*", features = ["json"] }
serde_json = { version = "*" }
tower-http = { version = "*", features = ["trace"] }
tracing = { version = "*" }
base64 = { version = "*" }
tower = { version = "0.5.2", features = ["util", "timeout"] }
